# Azure_Sphere_MS_Learn_v3

./: .gitmodules  README.md  azsphere_board.cmake  azsphere_board.global.txt  azsphere_board.txt  build_labs.ps1
ImagePackages/: README.md  lab_5_real_time_enviromon_bm_seeed_rdb.imagepackage  lab_6_real_time_enviromon_bm_avnet.imagepackage  lab_6_real_time_enviromon_bm_seeed_mini.imagepackage  lab_6_real_time_enviromon_rtos_avnet.imagepackage  lab_6_real_time_enviromon_rtos_seeed_mini.imagepackage  lab_6_real_time_enviromon_rtos_seeed_rdb.imagepackage
IoTPlugAndPlay/: lab-monitor-1.json
Lab_1_Hello_World/: CMakeLists.txt  app_manifest.json  hvac_sensors.c  hvac_status.c  hvac_status.h  main.c  main.h
Lab_2_Publish_Telemetry/: CMakeLists.txt  hvac_sensors.c  hvac_sensors.h  hvac_status.c  main.c  main.h  onboard_sensors.c
Lab_2_Send_Telemetry_to_Azure_IoT/: app_manifest.json  main.c  main.h
Lab_3_Device_Twins/: .clang-format  app_manifest.json  hvac_status.c  hvac_status.h  main.c  main.h  onboard_sensors.h
Lab_4_Direct_Methods/: CMakeLists.txt  app_manifest.json  hvac_sensors.h  main.c  main.h
Lab_5_Real_Time_Enviromon_BM/: CMakeLists.txt  main.c
Lab_5_Real_Time_Enviromon_BM/IMU_lib/: imu_temp_pressure.h
Lab_6_Real_Time_Enviromon_BM/: CMakeLists.txt  main.c
Lab_6_Real_Time_Enviromon_RTOS/: CMakeLists.txt  CMakeSettings.json  app_manifest.json
Lab_6_Real_Time_Enviromon_RTOS/IMU_lib/: imu_temp_pressure.h
Lab_6_Real_Time_Enviromon_RTOS/cmake/: azsphere_config.cmake
Lab_6_Real_Time_Enviromon_RTOS/demo_threadx/: demo_threadx.c
Lab_7_End_To_End/: CMakeLists.txt  main.c  main.h  onboard_sensors.h
Lab_8_Production/: CMakeLists.txt  main.c  main.h
Lab_8_Producton/: main.c  main.h  onboard_sensors.h  onboard_status.c
OTA_Deployment/: deploy_image.ps1  list_deployed_images.ps1
